Updated image spacing to fix event card

--- a/healthgovau-theme/css/styles.css
+++ b/healthgovau-theme/css/styles.css
@@ -6285,9 +6285,9 @@ body.breastscreen > main .see-more {
 .girlsmove #block-views-event-block-1 {
   padding-bottom: 3.2em; }
 
-.girlsmove .region-content .field-name-field-image {
+.girlsmove .content .field-name-field-image {
   margin-bottom: 3.2em; }
-  .girlsmove .region-content .field-name-field-image img {
+  .girlsmove .content .field-name-field-image img {
     height: auto;
     width: auto; }
 
