--- a/healthgovau-theme/sass/campaign/gmym/_gmym.scss
+++ b/healthgovau-theme/sass/campaign/gmym/_gmym.scss
@@ -30,7 +30,7 @@
     padding-bottom: $large-spacing;
   }
 
-  .region-content {
+  .content {
     .field-name-field-image {
       margin-bottom: $large-spacing;
       img {
